:lipstick: estilos-ficha-Adri

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -71,11 +71,10 @@
         </ul>
     </div>
     <hr>
-
-    <div>
+    <div class="Ficha-adri">
         <h1>Adriana Macedo Sánchez</h1>
         <br><br>
-        <p>Creo en ti</p>
+        <p>Yo antes de ti</p>
         <br><br>
         <ul>
             <li>camila</li>
